@@ -6,7 +6,7 @@
 # 20190305 use c() for combination of elements, list() for chemical system,
 #          and add 'ligands' argument to retrieve element-bearing species
 
-retrieve <- function(elements = NULL, ligands = NULL, state = NULL, add.charge = TRUE, hide.groups = TRUE) {
+retrieve <- function(elements = NULL, ligands = NULL, state = NULL, T = NULL, P = "Psat", add.charge = TRUE, hide.groups = TRUE) {
   ## empty argument handling
   if(is.null(elements)) return(integer())
 
@@ -113,6 +113,12 @@ retrieve <- function(elements = NULL, ligands = NULL, state = NULL, add.charge =
   if(!is.null(state)) {
     istate <- thermo()$OBIGT$state[ispecies] %in% state
     ispecies <- ispecies[istate]
+  }
+
+  # require non-NA Delta G0 at specific temperature 20200825
+  if(!is.null(T)) {
+    G <- sapply(suppressMessages(subcrt(ispecies, T = T, P = P))$out, "[[", "G")
+    ispecies <- ispecies[!is.na(G)]
   }
 
   # assign names; use e- instead of (Z-1)
